<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="evolable.asia.ui.authens.login.LoginActivity">

    <include layout="@layout/toolbar_sub_activity" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/xlarge_margin"
        android:layout_marginRight="@dimen/xlarge_margin"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/xlarge_margin">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/xxxlarge_margin"
                android:gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_email"
                    style="@style/EditText"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inp_layout_password"
                style="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/xxxlarge_margin"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_button"
                android:text="@string/action_login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/xxxlarge_margin"
                android:text="@string/forgot_your_pass" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/action_register" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
